migrate to kotlin

--- a/exoplayer-codelab-00/player-lib/build.gradle
+++ b/exoplayer-codelab-00/player-lib/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 27
@@ -22,4 +24,8 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-core:2.9.1'
     implementation 'com.google.android.exoplayer:exoplayer-dash:2.8.2'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.9.1'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
