--- a/exoplayer-codelab-00/app/build.gradle
+++ b/exoplayer-codelab-00/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 27
@@ -23,4 +25,8 @@ android {
 
 dependencies {
     implementation project(":player-lib")
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
